--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link href="https://fonts.googleapis.com/css?family=Jua|Montserrat" rel="stylesheet">
-  <script src="main.js"></script>
 </head>
 
 <body>
   <header>
     <div class="Logo">
       <div class="Logo-title">
-        <img src="tp_images_fonts/images/zozor_logo.png" />
+        <img src="images/zozor_logo.png" />
         <div class="Logo-title-name">Zozor</div>
       </div>
       <div class="Logo-subtitle">
@@ -32,11 +31,99 @@
   </header>
 
   <div class="ad">
-    <img src="tp_images_fonts/images/sanfrancisco.jpg" />
-    <div>
-
-    </div>
+    <img src="images/sanfrancisco.jpg" />
   </div>
+
+  <section>
+    <article>
+      <h1 class="article-header">
+        <img src="images/pin.png" />
+        <span>
+          I'm a great traveller
+        </span>
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Risus in hendrerit gravida rutrum quisque. Sodales ut eu sem integer vitae. Cras adipiscing enim eu turpis egestas.
+        Diam donec adipiscing tristique risus nec feugiat in. Urna condimentum mattis pellentesque id nibh tortor. Tortor
+        id aliquet lectus proin nibh nisl condimentum id. Tempus iaculis urna id volutpat lacus laoreet non curabitur. Leo
+        urna molestie at elementum eu facilisis sed odio morbi. Etiam tempor orci eu lobortis elementum nibh tellus molestie
+        nunc. Fermentum et sollicitudin ac orci.
+      </p>
+      <p>
+        In vitae turpis massa sed. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Lectus magna fringilla urna porttitor
+        rhoncus dolor. Proin fermentum leo vel orci porta non. Cras sed felis eget velit aliquet sagittis id consectetur.
+        Adipiscing at in tellus integer feugiat scelerisque varius. Elit pellentesque habitant morbi tristique senectus.
+        Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Integer vitae justo eget magna. Non blandit
+        massa enim nec dui nunc mattis enim. Iaculis urna id volutpat lacus laoreet non curabitur.
+      </p>
+      <p>
+        Vitae ultricies leo integer malesuada. Neque vitae tempus quam pellentesque nec nam aliquam. Commodo ullamcorper a lacus
+        vestibulum sed arcu non. Consequat mauris nunc congue nisi vitae suscipit tellus mauris a. Quis hendrerit dolor magna
+        eget est. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Enim sit amet venenatis urna. Morbi tristique
+        senectus et netus et malesuada fames. Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum. Vitae
+        proin sagittis nisl rhoncus. Donec enim diam vulputate ut pharetra sit. Porttitor rhoncus dolor purus non enim praesent.
+        Vel pretium lectus quam id leo in vitae turpis. Habitasse platea dictumst vestibulum rhoncus. Sem viverra aliquet
+        eget sit amet.
+      </p>
+    </article>
+    <aside>
+      <h1>About the author</h1>
+      <div class="zozor-pic"><img src="images/zozor.png" /></div>
+      <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
+      <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know who I really
+        am.
+      </p>
+      <div class="social">
+        <img src="images/facebook.png" />
+        <img src="images/twitter.png" />
+        <img src="images/vimeo.png" />
+        <img src="images/flickr.png" />
+        <img src="images/rss.png" />
+      </div>
+    </aside>
+  </section>
+
+  <div class="top">
+    <a href="#top">
+      <img src="images/top.png" />
+    </a>
+  </div>
+  <footer>
+    <div class="tweet">
+      <div class="title">MY LAST TWEET</div>
+      <div class="text">Hee-haw!</div>
+      <div class="text">12/05 23:12</div>
+    </div>
+
+    <div class="pictures">
+      <div class="title">MY LAST TWEET</div>
+      <div class="content">
+        <img src="images/pic1.jpg" />
+        <img src="images/pic2.jpg" />
+        <img src="images/pic3.jpg" />
+        <img src="images/pic4.jpg" />
+      </div>
+    </div>
+
+    <div class="friends">
+      <div class="title">MY LAST TWEET</div>
+      <div class="list">
+        <div>
+          <div class="text">Pupl the rabbit</div>
+          <div class="text">Mr Baobab</div>
+          <div class="text">Kalwaii</div>
+          <div class="text">Perceval.eu</div>
+        </div>
+        <div>
+          <div class="text">Ji</div>
+          <div class="text">Super cucumber</div>
+          <div class="text">Prince</div>
+          <div class="text">Mr Fan</div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
